--- a/styles.css
+++ b/styles.css
@@ -6,4 +6,58 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
+
+body {
+  font-size: 18px;
+  font-family: "Poppins", sans-serif;
+}
+
+header {
+  width: 100%;
+  height: 7.5rem;
+  padding: 2.5rem 0;
+  position: relative;
+}
+
+nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+nav .logo {
+  height: 3rem;
+  margin-right: 1rem;
+}
+
+nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+nav ul li {
+  padding: 0 1rem;
+}
+
+nav ul li :hover {
+  color: #232127;
+}
+
+nav ul a {
+  color: #9e9aa7;
+}
+
+.nav-button a {
+  padding: 0.5rem 1.5rem;
+  background-color: #2acfcf;
+  color: white;
+  border-radius: 50px;
+}
 /*# sourceMappingURL=styles.css.map */
