--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,8 @@ body {
 
 header {
   width: 100%;
-  height: 7.5rem;
-  padding: 2.5rem 0;
+  height: 6rem;
+  padding: 2rem 0;
   position: relative;
 }
 
@@ -44,20 +44,91 @@ nav ul {
 
 nav ul li {
   padding: 0 1rem;
+  font-size: 1.2rem;
+  font-weight: 700;
 }
 
 nav ul li :hover {
-  color: #232127;
+  color: #3b3054;
+  -webkit-transition: 0.25s;
+  transition: 0.25s;
 }
 
-nav ul a {
+nav ul li .sign-up {
+  color: white;
+}
+
+nav ul li a {
   color: #9e9aa7;
 }
 
-.nav-button a {
+.btn a {
   padding: 0.5rem 1.5rem;
   background-color: #2acfcf;
   color: white;
   border-radius: 50px;
+  -webkit-transition: 0.25s;
+  transition: 0.25s;
+}
+
+.btn a:hover {
+  opacity: 0.8;
+}
+
+.intro {
+  padding: 5rem 0rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.intro-text {
+  margin-left: 5rem;
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.intro-text h1 {
+  margin-bottom: 0.75rem;
+  color: #3b3054;
+  font-size: 3.5rem;
+  line-height: 4rem;
+}
+
+.intro-text p {
+  margin-bottom: 2rem;
+  color: #9e9aa7;
+}
+
+.intro-text .btn-large {
+  padding: 0.5rem;
+  background-color: #2acfcf;
+  color: white;
+  border-radius: 50px;
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+
+.intro-img {
+  padding-left: 7rem;
+}
+
+.intro-img img {
+  margin-left: 15%;
 }
 /*# sourceMappingURL=styles.css.map */
