--- a/styles.css
+++ b/styles.css
@@ -10,12 +10,13 @@
 body {
   font-size: 18px;
   font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
 }
 
 header {
   width: 100%;
   height: 6rem;
-  padding: 2rem 0;
+  padding: 2rem;
   position: relative;
 }
 
@@ -26,14 +27,13 @@ nav {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 nav .logo {
   height: 3rem;
-  margin-right: 1rem;
+  margin-right: -12rem;
 }
 
 nav ul {
@@ -76,7 +76,7 @@ nav ul li a {
 }
 
 .intro {
-  padding: 5rem 0rem;
+  padding: 5rem 3rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -130,5 +130,103 @@ nav ul li a {
 
 .intro-img img {
   margin-left: 15%;
+}
+
+form {
+  background-color: #3b3054;
+  width: 80%;
+  padding: 2.5rem;
+  margin: 0 auto;
+  -webkit-transform: translateY(50%);
+          transform: translateY(50%);
+  border-radius: 0.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-image: url("./images/bg-shorten-desktop.svg");
+  background-size: cover;
+}
+
+.input-box form input {
+  padding: 1rem;
+  font-size: 1.25rem;
+  border-radius: 0.5rem;
+  border: transparent;
+  outline: none;
+  width: 80%;
+  margin-right: 1rem;
+}
+
+.input-box form button {
+  font-size: 1.25rem;
+  font-weight: 700;
+  padding: 1rem 2rem;
+  border-radius: 0.75rem;
+  border: transparent;
+  cursor: pointer;
+  color: white;
+  background-color: #2acfcf;
+}
+
+.statistics {
+  background-color: whitesmoke;
+  padding: 10rem;
+}
+
+.boost {
+  background-color: #3b3054;
+  background-image: url("./images/bg-boost-desktop.svg");
+  background-size: cover;
+  padding: 5rem;
+  text-align: center;
+}
+
+.boost p {
+  font-size: 3rem;
+  font-weight: 700;
+  color: white;
+  padding-bottom: 2rem;
+}
+
+.boost button {
+  padding: 1rem 3rem;
+  background-color: #2acfcf;
+  color: white;
+  border-radius: 50px;
+  font-size: 1.25rem;
+  font-weight: 700;
+  -webkit-transition: 0.25s;
+  transition: 0.25s;
+}
+
+.boost button:hover {
+  opacity: 0.8;
+}
+
+footer {
+  width: 100%;
+  height: 10%;
+  background-color: #35323e;
+}
+
+li:first-child {
+  color: white;
+}
+
+li:first-child:hover {
+  color: white;
+  cursor: default;
+}
+
+li {
+  color: #bfbfbf;
+}
+
+li:hover {
+  color: #2acfcf;
+  cursor: pointer;
 }
 /*# sourceMappingURL=styles.css.map */
