--- a/styles.scss
+++ b/styles.scss
@@ -21,6 +21,7 @@
 body {
   font-size: 18px;
   font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
 }
 
 // Color variables
@@ -36,18 +37,18 @@ $very-dark-violet: hsl(260, 8%, 14%);
 header {
   width: 100%;
   height: 6rem;
-  padding: 2rem 0;
+  padding: 2rem;
   position: relative;
 }
 
 nav {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-around;
 
   .logo {
     height: 3rem;
-    margin-right: 1rem;
+    margin-right: -12rem;
   }
 
   ul {
@@ -85,7 +86,7 @@ nav {
 
 // Intro
 .intro {
-  padding: 5rem 0rem;
+  padding: 5rem 3rem;
   display: flex;
   justify-content: space-between;
 }
@@ -123,5 +124,102 @@ nav {
 
   img {
     margin-left: 15%;
+  }
+}
+
+// Input section
+
+form {
+  background-color: $dark-violet;
+  width: 80%;
+  padding: 2.5rem;
+  margin: 0 auto;
+  transform: translateY(50%);
+  border-radius: 0.5rem;
+  display: flex;
+  align-items: center;
+  background-image: url("./images/bg-shorten-desktop.svg");
+  background-size: cover;
+}
+
+.input-box form input {
+  padding: 1rem;
+  font-size: 1.25rem;
+  border-radius: 0.5rem;
+  border: transparent;
+  outline: none;
+  width: 80%;
+  margin-right: 1rem;
+}
+
+.input-box form button {
+  font-size: 1.25rem;
+  font-weight: 700;
+  padding: 1rem 2rem;
+  border-radius: 0.75rem;
+  border: transparent;
+  cursor: pointer;
+  color: white;
+  background-color: $cyan;
+}
+
+// Statistics section
+
+.statistics {
+  background-color: whitesmoke;
+  padding: 10rem;
+}
+
+// Boost section
+
+.boost {
+  background-color: $dark-violet;
+  background-image: url("./images/bg-boost-desktop.svg");
+  background-size: cover;
+  padding: 5rem;
+  text-align: center;
+
+  p {
+    font-size: 3rem;
+    font-weight: 700;
+    color: white;
+    padding-bottom: 2rem;
+  }
+  button {
+    padding: 1rem 3rem;
+    background-color: $cyan;
+    color: white;
+    border-radius: 50px;
+    font-size: 1.25rem;
+    font-weight: 700;
+    transition: 0.25s;
+
+    &:hover {
+      opacity: 0.8;
+    }
+  }
+}
+
+// Footer
+
+footer {
+  width: 100%;
+  height: 10%;
+  background-color: $dark-blue;
+}
+
+li:first-child {
+  color: white;
+  &:hover {
+    color: white;
+    cursor: default;
+  }
+}
+
+li {
+  color: $gray;
+  &:hover {
+    color: $cyan;
+    cursor: pointer;
   }
 }
