--- a/styles.scss
+++ b/styles.scss
@@ -5,6 +5,7 @@
   text-decoration: none;
   list-style-type: none;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 // CSS Debug
@@ -110,12 +111,20 @@ nav {
     color: $gray-violet;
   }
   .btn-large {
-    padding: 0.5rem;
-    background-color: $cyan;
-    color: white;
-    border-radius: 50px;
     font-size: 1.2rem;
     font-weight: 700;
+    padding: 0.75rem 2rem;
+    background-color: $cyan;
+    border-radius: 50px;
+    transition: 0.25s;
+    outline: none;
+    border: none;
+    &:hover {
+      opacity: 0.8;
+    }
+    a {
+      color: white;
+    }
   }
 }
 
@@ -188,14 +197,17 @@ form {
   button {
     padding: 1rem 3rem;
     background-color: $cyan;
-    color: white;
     border-radius: 50px;
     font-size: 1.25rem;
     font-weight: 700;
     transition: 0.25s;
+    cursor: pointer;
 
     &:hover {
       opacity: 0.8;
+    }
+    a {
+      color: white;
     }
   }
 }
