--- a/styles.scss
+++ b/styles.scss
@@ -39,7 +39,6 @@ header {
   width: 100%;
   height: 6rem;
   padding: 2rem;
-  position: relative;
 }
 
 nav {
@@ -50,6 +49,7 @@ nav {
   .logo {
     height: 3rem;
     margin-right: -12rem;
+    margin-top: -1.5rem;
   }
 
   ul {
@@ -93,7 +93,7 @@ nav {
 }
 
 .intro-text {
-  margin-left: 5rem;
+  margin-left: 4rem;
   width: 50%;
   display: flex;
   flex-direction: column;
@@ -177,6 +177,26 @@ form {
 .statistics {
   background-color: whitesmoke;
   padding: 10rem;
+  text-align: center;
+
+  h2 {
+    color: $dark-violet;
+    font-size: 2.5rem;
+    line-height: 4rem;
+    padding-bottom: 1rem;
+  }
+  .statistics-text {
+    color: $gray-violet;
+    padding-bottom: 10rem;
+  }
+}
+
+hr {
+  width: 80%;
+  margin: 0 auto;
+  height: 10px;
+  background-color: $cyan;
+  border: none;
 }
 
 // Boost section
@@ -218,10 +238,17 @@ footer {
   width: 100%;
   height: 10%;
   background-color: $dark-blue;
+  padding: 5rem;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 li:first-child {
   color: white;
+  font-weight: 700;
+  margin-bottom: 1.5rem;
   &:hover {
     color: white;
     cursor: default;
@@ -230,8 +257,22 @@ li:first-child {
 
 li {
   color: $gray;
+  margin-bottom: 0.75rem;
+  font-weight: 500;
   &:hover {
     color: $cyan;
+    cursor: pointer;
+  }
+}
+
+.logo-white {
+  height: 2.5rem;
+}
+
+.social-icons img {
+  margin-left: 20px;
+
+  &:hover {
     cursor: pointer;
   }
 }
