--- a/styles.css
+++ b/styles.css
@@ -198,7 +198,7 @@ form {
 
 .statistics .statistics-text {
   color: #9e9aa7;
-  padding-bottom: 10rem;
+  padding-bottom: 6rem;
 }
 
 .card-line {
@@ -207,7 +207,8 @@ form {
   height: 10px;
   background-color: #2acfcf;
   border: none;
-  z-index: -1;
+  position: relative;
+  top: 10rem;
 }
 
 .cards {
@@ -224,9 +225,17 @@ form {
 
 .cards .card {
   background-color: white;
-  margin-left: 10px;
+  margin-left: 2rem;
   padding: 2rem;
   position: relative;
+}
+
+.cards .card:nth-child(2) {
+  top: 2.5rem;
+}
+
+.cards .card:last-child {
+  top: 5rem;
 }
 
 .cards .card img {
@@ -290,7 +299,7 @@ footer {
   width: 100%;
   height: 10%;
   background-color: #35323e;
-  padding: 5rem;
+  padding: 4rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
