--- a/styles.scss
+++ b/styles.scss
@@ -185,7 +185,7 @@ form {
   }
   .statistics-text {
     color: $gray-violet;
-    padding-bottom: 10rem;
+    padding-bottom: 6rem;
   }
 }
 
@@ -195,7 +195,8 @@ form {
   height: 10px;
   background-color: $cyan;
   border: none;
-  z-index: -1;
+  position: relative;
+  top: 10rem;
 }
 
 .cards {
@@ -205,9 +206,17 @@ form {
 
   .card {
     background-color: white;
-    margin-left: 10px;
+    margin-left: 2rem;
     padding: 2rem;
     position: relative;
+
+    &:nth-child(2) {
+      top: 2.5rem;
+    }
+
+    &:last-child {
+      top: 5rem;
+    }
 
     img {
       background: $dark-violet;
@@ -271,7 +280,7 @@ footer {
   width: 100%;
   height: 10%;
   background-color: $dark-blue;
-  padding: 5rem;
+  padding: 4rem;
   display: flex;
   align-items: flex-start;
   flex-direction: row;
