--- a/styles.css
+++ b/styles.css
@@ -238,13 +238,24 @@ form {
   top: 5rem;
 }
 
-.cards .card img {
+.cards .card .circle {
   background: #3b3054;
-  padding: 1rem;
+  width: 80px;
+  height: 80px;
   border-radius: 50%;
   position: absolute;
-  top: -2rem;
+  z-index: 2;
+  top: -2.5rem;
   left: 2rem;
+}
+
+.cards .card img {
+  background: #3b3054;
+  position: absolute;
+  width: 45px;
+  height: 45px;
+  top: 1rem;
+  left: 1rem;
 }
 
 .cards .card .card-title {
@@ -265,7 +276,7 @@ form {
   background-color: #3b3054;
   background-image: url("./images/bg-boost-desktop.svg");
   background-size: cover;
-  padding: 5rem;
+  padding: 2.5rem;
   text-align: center;
 }
 
@@ -299,7 +310,7 @@ footer {
   width: 100%;
   height: 10%;
   background-color: #35323e;
-  padding: 4rem;
+  padding: 3rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
