--- a/styles.scss
+++ b/styles.scss
@@ -218,13 +218,24 @@ form {
       top: 5rem;
     }
 
-    img {
+    .circle {
       background: $dark-violet;
-      padding: 1rem;
+      width: 80px;
+      height: 80px;
       border-radius: 50%;
       position: absolute;
-      top: -2rem;
+      z-index: 2;
+      top: -2.5rem;
       left: 2rem;
+    }
+
+    img {
+      background: $dark-violet;
+      position: absolute;
+      width: 45px;
+      height: 45px;
+      top: 1rem;
+      left: 1rem;
     }
 
     .card-title {
@@ -248,9 +259,8 @@ form {
   background-color: $dark-violet;
   background-image: url("./images/bg-boost-desktop.svg");
   background-size: cover;
-  padding: 5rem;
+  padding: 2.5rem;
   text-align: center;
-
   p {
     font-size: 3rem;
     font-weight: 700;
@@ -280,7 +290,7 @@ footer {
   width: 100%;
   height: 10%;
   background-color: $dark-blue;
-  padding: 4rem;
+  padding: 3rem;
   display: flex;
   align-items: flex-start;
   flex-direction: row;
