--- a/styles.scss
+++ b/styles.scss
@@ -177,6 +177,58 @@ form {
   padding: 10rem;
   text-align: center;
 
+  .links {
+    padding-bottom: 4rem;
+
+    .link-container {
+      background-color: white;
+      width: 100%;
+      height: 50px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1.75rem 1rem;
+      border-radius: 0.5rem;
+    }
+
+    .urls {
+      color: $gray-violet;
+      margin-left: 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-self: center;
+      font-size: 1rem;
+
+      .long-url {
+      }
+
+      .short-url {
+        color: $cyan;
+      }
+    }
+
+    .copy-btn {
+      font-size: 1rem;
+      font-weight: 700;
+      padding: 0.5rem 1.25rem;
+      border-radius: 0.5rem;
+      border: transparent;
+      cursor: pointer;
+      background-color: $cyan;
+      &:hover {
+        opacity: 0.8;
+      }
+
+      a {
+        color: white;
+      }
+    }
+    .copied {
+      background-color: $violet !important;
+      color: white;
+    }
+  }
+
   h2 {
     color: $dark-violet;
     font-size: 2.5rem;
@@ -242,13 +294,13 @@ form {
       font-size: 1.2rem;
       font-weight: 700;
       color: $dark-violet;
-      margin: 3rem 0.5rem 0 0;
+      margin-top: 2rem;
     }
 
     p {
       color: $gray;
       text-align: left;
-      margin-top: 1rem;
+      margin: 1rem 0.25rem;
       font-size: 1rem;
     }
   }
@@ -262,7 +314,7 @@ form {
   padding: 2.5rem;
   text-align: center;
   p {
-    font-size: 3rem;
+    font-size: 2.75rem;
     font-weight: 700;
     color: white;
     padding-bottom: 2rem;
