--- a/styles.css
+++ b/styles.css
@@ -144,13 +144,16 @@ nav ul li a {
   margin-left: 15%;
 }
 
+.input {
+  -webkit-transform: translateY(50%);
+          transform: translateY(50%);
+}
+
 form {
   background-color: #3b3054;
   width: 80%;
   padding: 2.5rem;
   margin: 0 auto;
-  -webkit-transform: translateY(50%);
-          transform: translateY(50%);
   border-radius: 0.5rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -162,7 +165,7 @@ form {
   background-size: cover;
 }
 
-.input-box form input {
+.input-box input {
   padding: 1rem;
   font-size: 1.25rem;
   border-radius: 0.5rem;
@@ -172,7 +175,7 @@ form {
   margin-right: 1rem;
 }
 
-.input-box form button {
+.input-box button {
   font-size: 1.25rem;
   font-weight: 700;
   padding: 1rem 2rem;
