--- a/styles.scss
+++ b/styles.scss
@@ -137,12 +137,14 @@ nav {
 }
 
 // Input section
+.input {
+  transform: translateY(50%);
+}
 form {
   background-color: $dark-violet;
   width: 80%;
   padding: 2.5rem;
   margin: 0 auto;
-  transform: translateY(50%);
   border-radius: 0.5rem;
   display: flex;
   align-items: center;
@@ -150,7 +152,7 @@ form {
   background-size: cover;
 }
 
-.input-box form input {
+.input-box input {
   padding: 1rem;
   font-size: 1.25rem;
   border-radius: 0.5rem;
@@ -160,7 +162,7 @@ form {
   margin-right: 1rem;
 }
 
-.input-box form button {
+.input-box button {
   font-size: 1.25rem;
   font-weight: 700;
   padding: 1rem 2rem;
